# bdap_assignment2

./: CMakeLists.txt  README.md  install.sh  log_in.sh
lib/include/: Bagging.hpp  Calculations.hpp  DataReader.hpp  DecisionTree.hpp  Question.hpp  Utils.hpp
lib/src/: Bagging.cpp  Calculations.cpp  DataReader.cpp  DecisionTree.cpp  Question.cpp  TreeTest.cpp
test/: CMakeLists.txt  bagging_tester.cpp  decision_tree_tester.cpp  import_test.cpp  mytest.cpp  mytest.h  test.sh
test/data/: fruit.arff  fruit_test.arff  iris.arff  iris_test.arff  tennis.arff  tennis_test.arff
test/resources/: fruit  full_1  full_2  iris  tennis_gain=0_size=1  tennis_gain==0
test/resources/SimpleDT/: full_1  full_2
test/resources/bagging/: fruit  full  iris  tennis  test on ensemble size
test/resources/multi thread/: add multi thread to leaf and right tree  multi_thread in splitting
test/resources/optimization/: loop through data only once  reserve the size of container  split loop to localize  use less devision  use_reference_in_function
